--- a/src/app/features/products/pages/products.component.html
+++ b/src/app/features/products/pages/products.component.html
@@ -1,23 +1,33 @@
-<div fxLayoutAlign="center center">
-    <div fxLayoutAlign="center center" fxFlex="1100px">
-        <div fxLayout="row wrap" fxLayoutAlign="flex-start">
-            <mat-card-title>{{ 'main.menu.products' | translate }}</mat-card-title>
-            <mat-card *ngFor="let photo of topSelection" fxFlex="200px">
-                <img mat-card-sm-image src="{{photo.url}}" alt="">
-                <mat-card-actions style="margin-bottom:2px;" fxLayout="row" fxLayoutAlign="flex-start">
-                    <div style="margin-left: 10px;" fxFlex="15%">
-                        <button mat-icon-button color="warn" (click)="deletePhoto(photo)">
-                            <mat-icon>delete_outline</mat-icon>
-                        </button>
-                    </div>
-                    <div fxFlex="15%">
-                        <button mat-icon-button color="warn" (click)="favoritePhoto(photo)">
-                            <mat-icon>favorite</mat-icon>
-                        </button>
-                    </div>
-                </mat-card-actions>
-            </mat-card>
+<div class="background">
+    <div  [ngClass]="routeAnimationsElements" class="gradient">
+        <div fxLayout="column"  >
+          
+            <div fxLayout="row wrap" fxLayoutAlign="center start" fxLayoutGap="10px" fxFlex="100">
+                <mat-card-header fxFlex="100">
+                    <mat-card-title> <h3> {{ 'main.menu.products' | translate }}</h3></mat-card-title>
+                </mat-card-header>
+                <div fxLayout="row wrap" fxFlex="1100px">
+                    <mat-card *ngFor="let photo of topSelection" fxFlex="200px">
+                        <img mat-card-sm-image src="{{photo.url}}" alt="">
+                        <mat-card-actions style="margin-bottom:2px;" fxLayout="row" fxLayoutAlign="flex-start">
+                            <div style="margin-left: 10px;" fxFlex="15%">
+                                <button mat-icon-button color="warn" (click)="deletePhoto(photo)">
+                                    <mat-icon>delete_outline</mat-icon>
+                                </button>
+                            </div>
+                            <div fxFlex="15%">
+                                <button mat-icon-button color="warn" (click)="favoritePhoto(photo)">
+                                    <mat-icon>favorite</mat-icon>
+                                </button>
+                            </div>
+                        </mat-card-actions>
+                    </mat-card>
+                </div>
+                   
+            </div>
+           
+
         </div>
+
     </div>
 </div>
-
