--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -29,7 +29,7 @@
 
         <div class="wrapper">
 
-            <div class="toolbar" [style.position]="(stickyHeader$ | async) ? 'fixed' : 'inherit'" [class.mat-elevation-z4]="(stickyHeader$ | async)">
+            <div class="toolbar">
                 <mat-toolbar color="primary">
                     <button mat-icon-button (click)="sidenav.toggle()">
                         <fa-icon icon="bars"></fa-icon>
@@ -65,7 +65,7 @@
                         </button>
                     </mat-menu>
 
-                    <button matTooltip="settings" mat-icon-button routerLink="setting"  class="d-none d-sm-inline">
+                    <button matTooltip="settings" mat-icon-button routerLink="setting" class="d-none d-sm-inline">
                         <mat-icon>settings</mat-icon>
                     </button>
 
@@ -77,19 +77,22 @@
                         </mat-select>
                     </span>
 
-                    <span *ngIf="selectedtheme" >
+                    <span *ngIf="selectedtheme">
                         <mat-select [ngModel]="selectedtheme.toUpperCase()" (selectionChange)="onThemeSelect($event)">
                             <mat-option *ngFor="let l of themes" [value]="l">
                                 {{ l.toUpperCase() }}
                             </mat-option>
                         </mat-select>
                     </span>
-                     
+
 
                 </mat-toolbar>
-            </div>
-
+            </div> 
+        
             <div class="content" [@routeAnimations]="o.isActivated && o.activatedRoute.routeConfig.data && o.activatedRoute.routeConfig.data.title">
+                <div *ngIf="showSpinner$ | async" >
+                    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                </div>
                 <router-outlet #o="outlet"></router-outlet>
 
             </div>
