--- a/src/app/features/products/layout/layout.component.html
+++ b/src/app/features/products/layout/layout.component.html
@@ -1,4 +1,14 @@
- 
-<div [@routeAnimations]="o.isActivated && o.activatedRoute.routeConfig.path">
-  <router-outlet #o="outlet"></router-outlet>
+<div>
+    <div  >
+        <mat-toolbar >
+            <button   (click)="addProductsClick()">
+                Add products
+            </button>
+            <button  routerLink="/products">
+                products
+            </button>
+
+        </mat-toolbar>
+    </div>
+    <router-outlet #o="outlet"></router-outlet>
 </div>
