--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,32 +1,52 @@
 <div [class]="'theme-wrapper ' + (selectedtheme)">
-    <mat-sidenav-container>
-        <mat-sidenav fixedInViewport="true" #sidenav mode="over">
+    <mat-drawer-container class="example-container" autosize>
+        <mat-drawer fixedInViewport="true" position="start" #drawer class="mainsidenav" mode="over">
             <mat-toolbar color="primary">
                 {{ 'appName' | translate}}
-                <button style=" margin-left: 80px;" mat-icon-button (click)="sidenav.toggle()">
+                <button style=" margin-left: 120px;" mat-icon-button (click)="drawer.toggle()">
                     <fa-icon class="fas   fa-lg" icon="bars"></fa-icon>
                 </button>
             </mat-toolbar>
             <mat-nav-list>
-                <a mat-list-item *ngFor="let item of navigationSideMenu" (click)="sidenav.close()" [routerLink]="[item.link]"
+                <a mat-list-item *ngFor="let item of navigationSideMenu" (click)="drawer.close()" [routerLink]="[item.link]"
                    routerLinkActive="active">
                     {{item.label | translate}}
                 </a>
+                <mat-divider></mat-divider>
                 <a mat-list-item href="https://github.com/tomastrajan/angular-ngrx-material-starter" target="_blank" rel="noopener noreferrer">
                     Github
                 </a>
+                <mat-divider></mat-divider>
+                <a mat-list-item matTooltip="profile" routerLink="/setting" class="d-none d-sm-inline">
+                    <mat-icon>settings</mat-icon>   {{ 'main.menu.setting' | translate}}
+                </a>
+                <mat-divider></mat-divider>
+                <a mat-list-item matTooltip="profile" routerLink="/profile" class="d-none d-sm-inline">
+                    <mat-icon>account_box</mat-icon>   {{ 'user.profile' | translate}}
+                </a>
+                <mat-divider></mat-divider>
             </mat-nav-list>
-            <a mat-list-item matTooltip="profile" routerLink="/setting" class="d-none d-sm-inline">
-                <mat-icon>settings</mat-icon>   {{ 'main.menu.setting' | translate}}
-            </a>
-            <a mat-list-item matTooltip="profile" routerLink="/profile" class="d-none d-sm-inline">
-                <mat-icon>account_box</mat-icon>   {{ 'user.profile' | translate}}
-            </a>
-        </mat-sidenav>
+        </mat-drawer>
+         
+        <div class="content" [@routeAnimations]="o.isActivated && o.activatedRoute.routeConfig.data && o.activatedRoute.routeConfig.data.title">
+            
+            
+            <div *ngIf="showLoadingBar$ | async">
+                <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+            </div>
+
+            <div *ngIf="showSpinner$ | async" class="overlay">
+                <div class="center">
+                    <mat-spinner color="primary" style="margin:0 auto;" mode="indeterminate"> </mat-spinner>
+                </div>
+            </div>
+            <router-outlet #o="outlet"></router-outlet>
+
+        </div>
         <div class="wrapper">
             <div class="toolbar">
                 <mat-toolbar color="primary">
-                    <button mat-icon-button (click)="sidenav.toggle()">
+                    <button mat-icon-button (click)="drawer.toggle()">
                         <fa-icon icon="bars"></fa-icon>
                     </button>
 
@@ -37,16 +57,17 @@
                     <button mat-icon-button class="matero-toolbar-button">
                         <mat-icon>search</mat-icon>
                     </button>
-                    
+
 
                     <button mat-icon-button mat-button color="accent" *ngIf="!(isAuthenticated$ | async)" (click)="onLoginClick()">
                         {{ 'main.menu.login' | translate }}
                     </button>
 
                     <button matTooltip="home" mat-icon-button routerLink="home" class="d-none d-sm-inline">
-                        <mat-icon>home</mat-icon>
-                    </button>
-                  
+                      
+                            <mat-icon matBadge="15" matBadgeColor="warn">home</mat-icon>
+                        
+                    </button> 
                     <span *ngIf="selectedlanguage">
 
                         <!--<mat-icon>translate  {{ selectedlanguage }} </mat-icon>-->
@@ -63,9 +84,7 @@
                             </mat-option>
                         </mat-select>
                     </span>
-                    <button mat-icon-button (click)="sidenavNotice.toggle()">
-                        <fa-icon icon="bars"></fa-icon>
-                    </button>
+
 
                     <app-notification fxHide.lt-sm></app-notification>
                     <a *ngIf="(isAuthenticated$ | async)" mat-menu-item (click)="onLogoutClick()">
@@ -92,7 +111,9 @@
                             <span>{{ 'main.menu.logout' | translate }}</span>
                         </a>
                     </mat-menu>
-
+                    <button mat-icon-button (click)="sidenavNotice.toggle()">
+                        <fa-icon icon="bars"></fa-icon>
+                    </button>
 
                 </mat-toolbar>
 
@@ -104,25 +125,37 @@
                     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
                 </div>
 
-
                 <div *ngIf="showSpinner$ | async" class="overlay">
                     <div class="center">
                         <mat-spinner color="primary" style="margin:0 auto;" mode="indeterminate"> </mat-spinner>
                     </div>
                 </div>
+                <!--<nav class="breadcrumb">
+                    <ol class="matero-breadcrumb">
+                        <li class="matero-breadcrumb-item">
+                            <a href="#" class="link">Home</a>
+                            <mat-icon class="chevron">chevron_right</mat-icon>
+                        </li>
+                        <li class="matero-breadcrumb-item">
+                            <a href="#" class="link">Home</a>
+                            <mat-icon class="chevron">chevron_right</mat-icon>
+                        </li>
+                    </ol>
+                </nav>-->
                 <router-outlet #o="outlet"></router-outlet>
 
             </div>
 
         </div>
-     
-        
-        <mat-sidenav #sidenavNotice position="end" mode="over">
+        <mat-drawer class="sidenavnotice" #sidenavNotice   fixedInViewport="true" position="end" mode="over">
+            <button style="margin-left:20px" mat-icon-button (click)="sidenavNotice.toggle()">
+                <fa-icon class="fas   fa-lg" icon="bars"></fa-icon>
+            </button>
+            <p matLine> cccc </p> 
+            <mat-divider></mat-divider>
             <app-sidebar-notice></app-sidebar-notice>
-        </mat-sidenav>
-    </mat-sidenav-container>
+        </mat-drawer>
 
-
-
+    </mat-drawer-container>
 
 </div>
