--- a/src/app/app/app.component.scss
+++ b/src/app/app/app.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles-variables';
+
 .loading-container {
     z-index: 201;
     top: 0;
@@ -10,7 +11,7 @@
   width: 100%;
 }
 
-mat-sidenav-container {
+mat-drawer-container {
     height: 100%;
     width: 100%;
 
@@ -19,7 +20,7 @@ mat-sidenav-container {
         width: 100%;
         display: flex;
         z-index: 10;
-        border-bottom: 1px solid #cfcdcd;
+        border-bottom: 1px solid #808080;
 
         button {
             min-width: 70px !important;
@@ -46,8 +47,8 @@ mat-sidenav-container {
             img {
                 position: relative;
                 top: -2px;
-                width: 80px;
-                height: 60px;
+                width: 40px;
+                height: 40px;
             }
         }
 
@@ -97,27 +98,67 @@ mat-sidenav-container {
     }
 }
 
-mat-sidenav {
-  width: 270px;
+mat-drawer.sidenavnotice {
+    width: 300px;
+    position: fixed !important; 
+    overflow: hidden;
+}
 
-  .branding {
-    height: 64px;
-    padding: 8px 10px;
-    font-size: 20px;
-    font-weight: 500;
+mat-drawer {
+    width: 270px; 
+    .branding {
+        height: 64px;
+        padding: 8px 10px;
+        font-size: 20px;
+        font-weight: 500;
 
-    img {
-      height: 48px;
-      margin: 2px 10px 0 0;
+        img {
+            height: 48px;
+            margin: 2px 10px 0 0;
+        }
+
+        span {
+            position: relative;
+            top: 3px;
+        }
     }
 
-    span {
-      position: relative;
-      top: 3px;
+    .mat-nav-list {
+        padding-top: 0;
     }
-  }
+}
 
-  .mat-nav-list {
-    padding-top: 0;
-  }
+.matero-breadcrumb {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin-bottom: 1rem;
+    list-style: none;
+    border-radius: .25rem;
+    font-size: .875rem;
+}
+
+.breadcrumb {
+    padding-left:50px;
+}
+.matero-breadcrumb-item {
+    line-height: 30px;
+    text-transform: capitalize;
+
+    > a {
+        color: currentColor;
+        
+        &:hover {
+            color: currentColor;
+            text-decoration: underline;
+        }
+    }
+
+    > .chevron {
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+        vertical-align: middle;
+        user-select: none;
+    }
 }
