--- a/src/app/features/account/layout/layout.component.html
+++ b/src/app/features/account/layout/layout.component.html
@@ -1,4 +1,12 @@
  
 <div [@routeAnimations]="o.isActivated && o.activatedRoute.routeConfig.path">
-  <router-outlet #o="outlet"></router-outlet>
+    <div>
+        <mat-toolbar>
+            <button (click)="OpenProfileDialog()">
+                Open Profile Dialog
+            </button>
+            
+        </mat-toolbar>
+    </div>
+    <router-outlet #o="outlet"></router-outlet>
 </div>
