--- a/src/app/app/app.component.scss-theme.scss
+++ b/src/app/app/app.component.scss-theme.scss
@@ -8,6 +8,8 @@
     mat-drawer-container {
         mat-toolbar {
             button {
+                line-height: 50px;
+
                 &.active {
                     color: mat-color($accent, default-contrast);
                     background-color: mat-color($accent);
@@ -19,8 +21,10 @@
             }
         }
 
-        mat-drawer  {
+        mat-drawer {
             .mat-list-item {
+                line-height: 50px;
+
                 &.active {
                     color: mat-color($accent, default-contrast);
                     background-color: mat-color($accent) !important;
